# WhiteBelt

./: CMakeLists.txt  README.md
AGoodPriceCalculation/: CMakeLists.txt  main.cpp
Anagrams/: CMakeLists.txt  main.cpp
AverageTemperature/: CMakeLists.txt  main.cpp
BinaryNumbers/: CMakeLists.txt  main.cpp
BinarySum/: CMakeLists.txt  main.cpp
BusStops/: CMakeLists.txt  main.cpp
BusStops2/: CMakeLists.txt  main.cpp
BusStops3/: CMakeLists.txt  main.cpp
CapitalDirectory/: CMakeLists.txt  main.cpp
CaseInsensitiveSorting/: CMakeLists.txt  main.cpp
Division/: CMakeLists.txt  main.cpp
EnsureEqual/: CMakeLists.txt  main.cpp
Equation/: CMakeLists.txt  main.cpp
EvenNumbers/: CMakeLists.txt  main.cpp
Factorial/: CMakeLists.txt  factorial.h  main.cpp
Final/: CMakeLists.txt  main.cpp
FirstAndLastNames/: CMakeLists.txt
FirstAndLastNames2/: CMakeLists.txt  main.cpp
FirstAndLastNames3/: CMakeLists.txt  main.cpp
GreatestCommonDivisor/: CMakeLists.txt  main.cpp
InitializationMethods/: CMakeLists.txt  main.cpp
LectureTitleStructure/: CMakeLists.txt  main.cpp
MapValueSet/: CMakeLists.txt  MapValueSet.h  main.cpp
Maximizer/: CMakeLists.txt  main.cpp
MinimalLine/: CMakeLists.txt  main.cpp
MonthlyCases/: CMakeLists.txt  main.cpp
MoveStrings/: CMakeLists.txt  main.cpp
OrdinaryFractionsCalculator/: CMakeLists.txt  main.cpp
OutputWithAccuracy/: CMakeLists.txt  main.cpp
Palindrome/: CMakeLists.txt  main.cpp  palindrome.h
PalindromeFilter/: CMakeLists.txt  main.cpp
Queue/: CMakeLists.txt  main.cpp
Rational/: CMakeLists.txt  main.cpp
Rational2/: CMakeLists.txt  main.cpp
Rational3/: CMakeLists.txt  main.cpp
Rational4/: CMakeLists.txt  main.cpp
Rational5/: CMakeLists.txt  main.cpp
RationalClassExceptions/: CMakeLists.txt  main.cpp
ReadingAndOutputOfTheTable/: CMakeLists.txt  main.cpp
ReversibleFunction/: CMakeLists.txt  Function.h  main.cpp
ReversibleFunctionWithMultiplicationAndDivision/: CMakeLists.txt  Function.h  main.cpp
SequenceReversal/: CMakeLists.txt  main.cpp
SequenceReversal2/: CMakeLists.txt  main.cpp
SortedStrings/: CMakeLists.txt  main.cpp
SortingIntegersModulo/: CMakeLists.txt  main.cpp
String/: CMakeLists.txt  main.cpp
StudentList/: CMakeLists.txt  main.cpp
Synonyms/: CMakeLists.txt
TheSecondEntry/: CMakeLists.txt  main.cpp
TimeServer/: CMakeLists.txt  main.cpp
UniqueRowNumber/: CMakeLists.txt  main.cpp
WorkingWithFiles/: CMakeLists.txt  main.cpp
WorkingWithFiles2/: CMakeLists.txt  main.cpp
