cmake_minimum_required(VERSION 3.27)
project(WhiteBelt)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(BinarySum)
add_subdirectory(MinimalLine)
add_subdirectory(Equation)
add_subdirectory(Division)
add_subdirectory(AGoodPriceCalculation)
add_subdirectory(EvenNumbers)
add_subdirectory(TheSecondEntry)
add_subdirectory(GreatestCommonDivisor)
add_subdirectory(BinaryNumbers)
add_subdirectory(Factorial)
add_subdirectory(Palindrome)
add_subdirectory(PalindromeFilter)
add_subdirectory(Maximizer)
add_subdirectory(MoveStrings)
add_subdirectory(SequenceReversal)
add_subdirectory(SequenceReversal2)
add_subdirectory(AverageTemperature)
add_subdirectory(Queue)
add_subdirectory(MonthlyCases)
add_subdirectory(Anagrams)
add_subdirectory(CapitalDirectory)