cmake_minimum_required(VERSION 3.27)
project(WhiteBelt)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(BinarySum)
add_subdirectory(MinimalLine)
add_subdirectory(Equation)
add_subdirectory(Division)
add_subdirectory(AGoodPriceCalculation)
add_subdirectory(EvenNumbers)
add_subdirectory(TheSecondEntry)
add_subdirectory(GreatestCommonDivisor)
add_subdirectory(BinaryNumbers)
add_subdirectory(Factorial)
add_subdirectory(Palindrome)
add_subdirectory(PalindromeFilter)
add_subdirectory(Maximizer)
add_subdirectory(MoveStrings)
add_subdirectory(SequenceReversal)
add_subdirectory(SequenceReversal2)
add_subdirectory(AverageTemperature)
add_subdirectory(Queue)
add_subdirectory(MonthlyCases)
add_subdirectory(Anagrams)
add_subdirectory(CapitalDirectory)
add_subdirectory(BusStops)
add_subdirectory(BusStops2)
add_subdirectory(UniqueRowNumber)
add_subdirectory(MapValueSet)
add_subdirectory(Synonyms)
add_subdirectory(BusStops3)
add_subdirectory(SortingIntegersModulo)
add_subdirectory(CaseInsensitiveSorting)
add_subdirectory(SortedStrings)
add_subdirectory(FirstAndLastNames)
add_subdirectory(FirstAndLastNames2)
add_subdirectory(String)
add_subdirectory(FirstAndLastNames3)
add_subdirectory(InitializationMethods)
add_subdirectory(LectureTitleStructure)
add_subdirectory(ReversibleFunction)
add_subdirectory(ReversibleFunctionWithMultiplicationAndDivision)
add_subdirectory(WorkingWithFiles)
add_subdirectory(WorkingWithFiles2)
add_subdirectory(OutputWithAccuracy)
add_subdirectory(ReadingAndOutputOfTheTable)
add_subdirectory(StudentList)
add_subdirectory(Rational)
add_subdirectory(Rational2)
add_subdirectory(Rational3)
add_subdirectory(Rational4)
add_subdirectory(Rational5)
add_subdirectory(EnsureEqual)
add_subdirectory(RationalClassExceptions)
add_subdirectory(OrdinaryFractionsCalculator)
add_subdirectory(TimeServer)
add_subdirectory(Final)